--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         <h1>I'm Krishna Teja</h1>
         <div class="stagger1">
             <span>
-            <p>A final-year Electronics and Communication undergraduate student <br> at Mahaveer Institute of Science & Technology</p>
+            <p>A final-year Electronics and Communication undergraduate student <br> at Ponnaiyah Ramajayam Institute of Science and Technology </p>
             </span>
         </div>
     </div>
