--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         <h1>I'm Krishna Teja</h1>
         <div class="stagger1">
             <span>
-            <p>A final-year Electronics and Communication undergraduate student <br> at Ponnaiyah Ramajayam Institute of Science and Technology </p>
+            <p>Greetings, I am Teja Nallamothu. This webpage serves as a formal avenue to showcase my professional journey, achievements, and insights. I invite you to explore this space. Thank you for your visit and interest <br></p>
             </span>
         </div>
     </div>
